--- a/03 - Model Evaluation.ipynb
+++ b/03 - Model Evaluation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aaronlee/opt/anaconda3/lib/python3.7/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator LinearRegression from version 0.21.2 when using version 0.22.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# load the model from disk\n",
     "model = pickle.load(open('pickled_data/02_regression_model.pkl', 'rb'))\n",
@@ -81,8 +90,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recreate the X and y data for our model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +125,7 @@
        " ('view_3.0', 344191.5901786747)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +138,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +177,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Mean Squared Error and Root Mean Squared Error (MSE/RMSE)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -165,8 +193,8 @@
      "output_type": "stream",
      "text": [
       "Train Mean Squarred Error: 23795705325.594074\n",
-      "Test Mean Squarred Error: 24272450149.827824\n",
-      "0.9803586032192497\n",
+      "Test Mean Squarred Error: 24272450149.827827\n",
+      "0.9803586032192496\n",
       "RMSE: 154300.0 155800.0\n"
      ]
     }
@@ -182,6 +210,13 @@
     "\n",
     "print(\"RMSE:\", np.sqrt(train_mse).round(-2), np.sqrt(test_mse).round(-2))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
