--- a/03 - Model Evaluation.ipynb
+++ b/03 - Model Evaluation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/aaronlee/opt/anaconda3/lib/python3.7/site-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.linear_model.base module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.linear_model. Anything that cannot be imported from sklearn.linear_model is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n",
       "/Users/aaronlee/opt/anaconda3/lib/python3.7/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator LinearRegression from version 0.21.2 when using version 0.22.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
       "  UserWarning)\n"
      ]
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +127,7 @@
        " ('view_3.0', 344191.5901786747)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +195,8 @@
      "output_type": "stream",
      "text": [
       "Train Mean Squarred Error: 23795705325.594074\n",
-      "Test Mean Squarred Error: 24272450149.827827\n",
-      "0.9803586032192496\n",
+      "Test Mean Squarred Error: 24272450149.827824\n",
+      "0.9803586032192497\n",
       "RMSE: 154300.0 155800.0\n"
      ]
     }
@@ -216,7 +218,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use Mean absolute error for non-tech.  MSE/RMSE for tech.\n",
+    "# build model in sm\n",
+    "# validate in sklearn"
+   ]
   },
   {
    "cell_type": "code",
