--- a/01-Prepare Data.ipynb
+++ b/01-Prepare Data.ipynb
@@ -2326,9 +2326,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:learn-env] *",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "conda-env-learn-env-py"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2340,7 +2340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
